2014-04-28  Holger Seelig  <holger.seelig@yahoo.de>

	* MagicImport.cpp: 

2014-04-26  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DConsoleInterface.h:
	* X3DLibraryViewInterface.h:
	* X3DViewpointListInterface.h:
	* X3DOutlineEditorInterface.h:
	* X3DTextureEditorInterface.h:
	* X3DHistoryEditorInterface.h:
	* X3DBrowserWindowInterface.h:
	* X3DMaterialEditorInterface.h:
	* X3DOutlineTreeViewInterface.h:
	* X3DViewpointListInterface.cpp:
	* X3DBrowserWindowInterface.cpp:
	* X3DMotionBlurEditorInterface.h:
	* X3DMaterialEditorInterface.cpp:
	* X3DNodePropertiesEditorInterface.h: 

2014-04-26  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp: 

2014-04-26  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserWidget.cpp: 

2014-04-26  Holger Seelig  <holger.seelig@yahoo.de>

	* MotionBlurEditor.cpp: 

2014-04-25  Holger Seelig  <holger.seelig@yahoo.de>

	* MagicImport.cpp: 

2014-04-25  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseInterface.h:
	* X3DBrowserSelection.h: 

2014-04-20  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl:
	* style.css:
	* BrowserWindow.xml: 

2014-04-19  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DUserInterface.h:
	* X3DUserInterface.cpp:
	* BrowserWindow.cpp: 

2014-04-09  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp: 

2014-04-09  Holger Seelig  <holger.seelig@yahoo.de>

	* ChangeLog:
	* MagicImport.cpp: 

2014-04-07  Holger Seelig  <holger.seelig@yahoo.de>

	* MagicImport.cpp:
	* X3DBrowserEditor.h:
	* MaterialEditor.cpp:
	* Array.h:
	* OutlineFields.h:
	* TextViewEditable.cpp:
	* OutlineCellRenderer.h:
	* OutlineCellRenderer.cpp: 

2014-04-07  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserWidget.cpp:
	* OutlineTreeModel.h:
	* Array.h:
	* OutlineTreeViewEditor.cpp:
	* OutlineCellRenderer.h:
	* OutlineCellRenderer.cpp: 

2014-04-06  Holger Seelig  <holger.seelig@yahoo.de>

	* TextViewEditable.h:
	* TextViewEditable.cpp: 

2014-04-06  Holger Seelig  <holger.seelig@yahoo.de>
