@@ -1,3 +1,7 @@
+2014-04-29  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* NodePropertiesEditor.xml: 
+
 2014-04-28  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* MagicImport.cpp: 
